@@ -1,3 +1,4 @@
+	* fixed connection limit to take web seeds into account as well
 	* fixed bug when receiving a have message before having the metadata
 	* fixed python bindings build with disabled DHT support
 	* fixed BSD file allocation issue
